add styling to timeslot list

--- a/app/views/timeslots/edit.html.erb
+++ b/app/views/timeslots/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Editing Timeslot</h1>
 
+<p><strong>Timeslot ID:</strong> <%= @timeslot.id %></p>
+
 <%= render 'form', timeslot: @timeslot %>
 
 <%= link_to 'Show', @timeslot %> |
