--- a/app/views/timeslots/index.html.erb
+++ b/app/views/timeslots/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Booking List</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Date</th>
@@ -16,8 +16,8 @@
   <tbody>
     <% @timeslots.each do |timeslot| %>
       <tr>
-        <td><%= timeslot.date %></td>
-        <td><%= timeslot.start_time %></td>
+        <td><%= timeslot.date.strftime("%d/%m/%Y") %></td>
+        <td><%= timeslot.start_time.strftime("%I:%M") %></td>
         <td><%= timeslot.status %></td>
         <td><%= timeslot.advisor %></td>
     
