--- a/app/views/timeslots/show.html.erb
+++ b/app/views/timeslots/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>Start time:</strong>
+  <strong>Time:</strong>
   <%= @timeslot.start_time %>
 </p>
 
 <p>
   <strong>Advisor:</strong>
-  <%= @timeslot.advisor %>
+  <%= @timeslot.advisor_id %>
 </p>
 
 <%= link_to 'Edit', edit_timeslot_path(@timeslot) %> |
