--- a/app/views/timeslots/index.html.erb
+++ b/app/views/timeslots/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>Start time</th>
+      <th>Time</th>
       <th>Status</th>
       <th>Advisor</th>
       <th colspan="3"></th>
@@ -19,11 +19,10 @@
         <td><%= timeslot.date.strftime("%d/%m/%Y") %></td>
         <td><%= timeslot.start_time.strftime("%I:%M") %></td>
         <td><%= timeslot.status %></td>
-        <td><%= timeslot.advisor %></td>
-    
+        <td><%= timeslot.advisor_id %></td>
         <td><%= link_to 'Edit', edit_timeslot_path(timeslot) %></td>
         <td><%= link_to 'Delete', timeslot, method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
+              </td>
       </tr>
     <% end %>
   </tbody>
