--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,8 +25,8 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
-        <li><a href="#">Logged in as: </a></li>
       </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
