--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -16,14 +16,22 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Book Now</a></li>
           <% if user_signed_in? %>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Staff Action<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Create Booking", new_session_path %></li>
+            <li><%= link_to "View Bookings", sessions_path %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to "New Advisor", new_advisor_path %></li>
+            <li><%= link_to "Time Slot Action", new_timeslot_path %></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Schedule confirmation</a></li>
           </ul>
         </li>
         <% end %>
