use enum for time slots

--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -30,6 +30,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to "New Advisor", new_advisor_path %></li>
             <li><%= link_to "Time Slot Action", new_timeslot_path %></li>
+            <li><%= link_to "Edit/Delete Time Slots", timeslots_path %></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Schedule confirmation</a></li>
           </ul>
