--- a/app/views/timeslots/_form.html.erb
+++ b/app/views/timeslots/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.check_box :status %>
+    <%= form.number_field :status %>
   </div>
   
   <div class="actions">
