--- a/app/views/timeslots/index.html.erb
+++ b/app/views/timeslots/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Booking List</h1>
+<h1>Time Slot List</h1>
 
 <table class="table table-bordered">
   <thead>
